--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CRA-components-development",
-  "version": "0.1.0",
+  "version": "0.1.7",
   "private": true,
   "homepage": "http://rip21.github.io/CRA-components-development/",
   "engines": {
@@ -25,7 +25,7 @@
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "test:coverage": "npm test -- --coverage",
-    "prettier": "prettier --write src/*.js",
+    "prettier": "prettier --write src/*/**.js",
     "eslint": "eslint ./src",
     "stylelint": "stylelint src/*.js",
     "prestylecheck": "run-s prettier",
@@ -42,8 +42,8 @@
     "release": "cd lib && npm publish && cd .. && npm run deploy:docs"
   },
   "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.0",
+    "react-dom": "^15.6.0",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.5",
     "styled-components": "^2.0.0"
@@ -54,9 +54,10 @@
     "cpx": "^1.5.0",
     "cross-env": "^5.0.0",
     "enzyme": "^2.8.2",
-    "eslint": "^3.19.0",
+    "eslint": "^4.0.0",
     "eslint-config-prettier": "^2.1.1",
-    "eslint-plugin-prettier": "^2.1.1",
+    "eslint-plugin-prettier": "^2.1.2",
+    "jest-styled-components": "^3.0.2",
     "husky": "^0.13.4",
     "jest-enzyme": "^3.2.0",
     "lint-staged": "^3.6.1",
@@ -64,12 +65,12 @@
     "prettier": "^1.4.2",
     "prop-types": "latest",
     "react-scripts": "1.0.7",
-    "react-styleguidist": "^5.4.1",
+    "react-styleguidist": "^5.4.4",
     "react-test-renderer": "^15.5.4",
     "rimraf": "^2.6.1",
     "stylelint": "^7.11.0",
     "stylelint-config-standard": "^16.0.0",
-    "stylelint-processor-styled-components": "^0.1.0",
+    "stylelint-processor-styled-components": "^0.1.2",
     "webpack": "^2.6.1"
   },
   "files": [
@@ -83,6 +84,7 @@
   "jest": {
     "collectCoverageFrom": [
       "src/components/**/*.{js,jsx}",
+      "!src/components/**/*/index.{js,jsx}",
       "!src/components/index.js"
     ]
   },
