--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test:coverage": "npm test -- --coverage",
     "prettier": "prettier --write src/*/**.js",
     "eslint": "eslint ./src",
-    "stylelint": "stylelint src/*.js",
+    "stylelint": "stylelint src/*/**.js",
     "prestylecheck": "run-s prettier",
     "stylecheck": "run-p stylelint eslint",
     "clean": "rimraf lib",
