--- a/package.json
+++ b/package.json
@@ -93,7 +93,11 @@
       "stylelint-processor-styled-components"
     ],
     "extends": "stylelint-config-standard",
-    "syntax": "scss"
+    "syntax": "scss",
+    "rules": {
+      "block-opening-brace-space-after":"never-single-line",
+      "block-closing-brace-space-before":"never-single-line"
+    }
   },
   "lint-staged": {
     "*": [
