--- a/package.json
+++ b/package.json
@@ -43,35 +43,36 @@
   },
   "dependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",,
-    "semantic-ui-css": "^2.2.10",
-    "semantic-ui-react": "^0.74.0",
-    "styled-components": "^2.0.0"
+    "react-dom": "^16.0.0",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.74.2",
+    "styled-components": "^2.1.2"
   },
   "devDependencies": {
-    "gh-pages": "^1.0.0",
-    "babel-cli": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "cpx": "^1.5.0",
-    "cross-env": "^5.0.0",
+    "cross-env": "^5.0.5",
     "enzyme": "^3.0.0",
-    "eslint": "^4.0.0",
-    "eslint-config-prettier": "^2.1.1",
-    "eslint-plugin-prettier": "^2.1.2",
-    "jest-styled-components": "^4.0.0",
-    "husky": "^0.14.0",
-    "jest-enzyme": "^3.2.0",
-    "lint-staged": "^4.0.0",
-    "npm-run-all": "^4.0.2",
-    "prettier": "^1.4.2",
-    "prop-types": "latest",
+    "enzyme-adapter-react-16": "^1.0.0",
+    "eslint": "^4.7.2",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "gh-pages": "^1.0.0",
+    "husky": "^0.14.3",
+    "jest-enzyme": "^3.8.3",
+    "jest-styled-components": "^4.6.0",
+    "lint-staged": "^4.2.3",
+    "npm-run-all": "^4.1.1",
+    "prettier": "^1.7.0",
+    "prop-types": "^15.6.0",
     "react-scripts": "1.0.14",
-    "react-styleguidist": "^6.0.0",
+    "react-styleguidist": "^6.0.26",
     "react-test-renderer": "^16.0.0",
-    "rimraf": "^2.6.1",
-    "stylelint": "^8.0.0",
+    "rimraf": "^2.6.2",
+    "stylelint": "^8.1.1",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-processor-styled-components": "^1.0.0",
-    "webpack": "^3.0.0"
+    "webpack": "^3.6.0"
   },
   "files": [
     "lib"
@@ -95,8 +96,8 @@
     "extends": "stylelint-config-standard",
     "syntax": "scss",
     "rules": {
-      "block-opening-brace-space-after":"never-single-line",
-      "block-closing-brace-space-before":"never-single-line"
+      "block-opening-brace-space-after": "never-single-line",
+      "block-closing-brace-space-before": "never-single-line"
     }
   },
   "lint-staged": {
