--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "toolkit"
   ],
   "scripts": {
-    "demo:start": "react-scripts start",
-    "demo:build": "react-scripts build",
+    "demo:start": "react-app-rewired start",
+    "demo:build": "react-app-rewired build",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
+    "test": "cross-env CI=true react-app-rewired test --env=jsdom",
+    "test:watch": "react-app-rewired test --env=jsdom",
     "test:coverage": "npm test -- --coverage",
-    "prettier": "prettier --write src/*/**.js",
-    "eslint": "eslint ./src",
+    "prettier": "eslint --fix ./src",
+    "lint": "eslint ./src",
     "stylelint": "stylelint src/*/**.js",
     "prestylecheck": "run-s prettier",
-    "stylecheck": "run-p stylelint eslint",
+    "stylecheck": "run-p lint",
     "clean": "rimraf lib",
     "build:css": "cpx \"./src/components/**/*.css\" ./lib",
     "build:es6": "cross-env NODE_ENV=production babel src/components --out-dir lib --ignore test.js",
@@ -39,7 +39,8 @@
     "predeploy:docs": "npm run styleguide:build",
     "deploy:docs": "gh-pages -d styleguide",
     "prerelease": "npm run build",
-    "release": "cd lib && npm publish && cd .. && npm run deploy:docs"
+    "release": "cd lib && npm publish && cd .. && npm run deploy:docs",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "react": "^16.0.0",
@@ -49,29 +50,31 @@
     "styled-components": "^2.1.2"
   },
   "devDependencies": {
+    "babel-preset-react-app": "^3.0.3",
     "babel-cli": "^6.26.0",
     "cpx": "^1.5.0",
     "cross-env": "^5.0.5",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
-    "eslint": "^4.7.2",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
     "gh-pages": "^1.0.0",
     "husky": "^0.14.3",
-    "jest-enzyme": "^3.8.3",
+    "jest-enzyme": "^4.0.0",
     "jest-styled-components": "^4.6.0",
     "lint-staged": "^4.2.3",
     "npm-run-all": "^4.1.1",
-    "prettier": "^1.7.0",
+    "prettier": "^1.7.2",
     "prop-types": "^15.6.0",
     "react-scripts": "1.0.14",
+    "react-app-rewired": "^1.3.0",
     "react-styleguidist": "^6.0.26",
     "react-test-renderer": "^16.0.0",
     "rimraf": "^2.6.2",
     "stylelint": "^8.1.1",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-processor-styled-components": "^1.0.0",
+    "react-app-rewire-styled-components": "^3.0.0",
     "webpack": "^3.6.0"
   },
   "files": [
@@ -101,8 +104,9 @@
     }
   },
   "lint-staged": {
-    "*": [
-      "prettier"
+    "*.js": [
+      "eslint --fix",
+      "git add"
     ]
   }
 }
