--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "CRA-components-development",
-  "version": "0.1.7",
+  "version": "0.1.12",
   "private": true,
   "homepage": "http://rip21.github.io/CRA-components-development/",
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=6.0.0"
   },
   "author": {
     "name": "Andrii Los",
@@ -42,47 +42,61 @@
     "release": "cd lib && npm publish && cd .. && npm run deploy:docs",
     "precommit": "lint-staged"
   },
+  "peerDependencies": {
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "styled-components": "^2.2.3"
+  },
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.77.0",
-    "styled-components": "^2.1.2"
+    "normalize.css": "^7.0.0",
+    "prop-types": "^15.6.0"
   },
   "devDependencies": {
-    "babel-preset-react-app": "^3.0.3",
     "babel-cli": "^6.26.0",
     "cpx": "^1.5.0",
-    "cross-env": "^5.0.5",
-    "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.0.0",
-    "eslint-config-prettier": "^2.6.0",
+    "cross-env": "^5.1.1",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.3.1",
-    "gh-pages": "^1.0.0",
+    "gh-pages": "^1.1.0",
     "husky": "^0.14.3",
-    "jest-enzyme": "^4.0.0",
-    "jest-styled-components": "^4.6.0",
+    "jest-enzyme": "^4.0.1",
+    "jest-styled-components": "^4.9.0",
     "lint-staged": "^5.0.0",
-    "npm-run-all": "^4.1.1",
-    "prettier": "^1.7.2",
-    "prop-types": "^15.6.0",
-    "react-scripts": "1.0.17",
-    "react-app-rewired": "^1.3.0",
-    "react-styleguidist": "^6.0.26",
-    "react-test-renderer": "^16.0.0",
-    "rimraf": "^2.6.2",
-    "stylelint": "^8.1.1",
-    "stylelint-config-standard": "^18.0.0",
-    "stylelint-processor-styled-components": "^1.0.0",
+    "npm-run-all": "^4.1.2",
+    "prettier": "^1.8.2",
+    "react": "^16.1.1",
+    "react-app-rewire-polished": "^1.0.3",
     "react-app-rewire-styled-components": "^3.0.0",
-    "webpack": "^3.6.0"
+    "react-app-rewired": "^1.3.5",
+    "react-dom": "^16.1.1",
+    "react-scripts": "1.0.17",
+    "react-styleguidist": "^6.0.33",
+    "react-test-renderer": "^16.1.1",
+    "rimraf": "^2.6.2",
+    "styled-components": "^2.2.3",
+    "stylelint": "^8.3.1",
+    "stylelint-config-standard": "^18.0.0",
+    "stylelint-processor-styled-components": "^1.1.1"
   },
   "files": [
     "lib"
   ],
   "babel": {
     "presets": [
-      "react-app"
+      [
+        "env",
+        {
+          "targets": {
+            "node": "6.10"
+          }
+        }
+      ],
+      [
+        "react-app"
+      ]
     ]
   },
   "jest": {
